[package]
name = "rliterate"
version = "0.1.0"
authors = ["Isaac van Bakel <ivb@vanbakel.io>"]
build = "build.rs"

[[bin]]
name = "literate"
path = "src/main.rs"

[build-dependencies]
peg = "*"

[dependencies]
log = "*"
env_logger = "*"
clap = "*"
peg = "*"
bitflags = "*"
subprocess = "*"

pulldown-cmark = "^0.1.0"
prettify-cmark = "*"
maud = "0.19"

